# magicarp-motors

./: LICENSE  README.md
cloud/: .gitignore  README.md  main.tf  startup-script.sh  test_stream_camera  test_stream_camera_srt  variables.tf
frontend/: .gitignore  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json
frontend/client/: index.html
frontend/client/src/: App.tsx  index.css
frontend/client/src/hooks/: use-telemetry.ts
frontend/client/src/pages/: overlay.tsx
frontend/src/: App.tsx  index.css  overlay.tsx  use-telemetry.ts  useSmoothedTelemetry.ts
race-monitor/: README.md  index.ts  package.json
telemetry/: .env.example  .gitignore  README.md  fly.toml  main.py  pyproject.toml
telemetry/telemetry/: fake_data.py  main.py
