[tool.poetry]
name = "telemetry"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
obd = "^0.7.2"
influxdb-client = "^1.44.0"
python-dotenv = "^1.0.1"

[tool.poetry.scripts]
start = "telemetry.main:start"
fake-data = "telemetry.fake_data:start"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
