[project]
name = "telemetry"
version = "0.1.0"
description = ""
authors = [{ name = "Your Name", email = "you@example.com" }]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "obd>=0.7.2",
    "paho-mqtt>=2.1.0",
    "python-dotenv>=1.0.1",
]

[project.scripts]
start = "telemetry.main:start"
fake-data = "telemetry.fake_data:start"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
